--- a/src/html/header.html
+++ b/src/html/header.html
@@ -14,7 +14,7 @@
 				</div>
 				<div class="nav__name">
 						<a href="#section-1">
-							<h1>Yuri Chapiuk</h1>
+							<h1>Yuriy Chapyuk</h1>
 							<span>Frontend Developer</span>
 						</a>
 					</div>
