--- a/src/index.html
+++ b/src/index.html
@@ -36,19 +36,19 @@
                         target="_blank" href="files/Portfolio Yura.pdf">Download CV</a>
                         <a class="button button-hire _icon-hire"
                         href="#section-4">Hire Me</a>
-                      <div class="home-social-network">
+                      <div class="home-social-network"
+                        data-aos="fade-up"
+                        data-aos-delay="650"
+                      >
                         
                         <a target="_blank" class="social-network__social-icon button _icon-linkedin" 
-                            data-aos="fade-up"
-                            data-aos-delay="650"
-                        href="https://www.linkedin.com/in/yurii-chapiuk-438277234" ></a>
+                        href="https://www.linkedin.com/in/yuriy-chapyuk-438277234"></a>
+
                         <a target="_blank" class="social-network__social-icon button _icon-github" 
-                            data-aos="fade-up"
-                            data-aos-delay="750"
-                        href="https://github.com/Scarbor0" ></a>
+                        href="https://github.com/Scarbor0"></a>
+
                         <a target="_blank" class="social-network__social-icon button _icon-telegram" 
-                            data-aos="fade-up"
-                            data-aos-delay="850"
+                            
                         href="https://t.me/Scarbor0" ></a>
                       </div>
                     </div>
