fix scroll active nav

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -20,20 +20,22 @@
 					</div>
 				</div>
 			<!-- <div class="wrapper__nav-list"> -->
-				<ul class="nav-list">
-					<!-- <div id="marker"></div> -->
-					<li class="nav-list__item"><a href="#section-1" class="nav-list__item-link button-nav"><ion-icon name="home-outline"></ion-icon>Home</a></li>
-					<li class="nav-list__item"><a href="#section-2" class="nav-list__item-link button-nav"><ion-icon name="person-outline"></ion-icon>
-						About&nbsp;Me</a></li>
-					<li class="nav-list__item"><a href="#section-3" class="nav-list__item-link button-nav"><ion-icon name="code-slash-outline"></ion-icon>
-						Portfolio</a></li>
-					<li class="nav-list__item"><a href="#section-4" class="nav-list__item-link button-nav"><ion-icon name="mail-outline"></ion-icon>
-						Contact&nbsp;Me</a></li>
-					<!-- <li class="button-nav "><a href="#"><ion-icon name="download-outline"></ion-icon>
-						Download&nbsp;CV
-					</a></li> -->
-					<!-- <div id="marker"></div> -->
-				</ul>
+				<nav class="navbar">
+					<ul class="nav-list">
+						<!-- <div id="marker"></div> -->
+						<li class="nav-list__item"><a href="#section-1" data-scroll-active-nav="section-1" class="nav-list__item-link button-nav"><ion-icon name="home-outline"></ion-icon>Home</a></li>
+						<li class="nav-list__item"><a href="#section-2" data-scroll-active-nav="section-2" class="nav-list__item-link button-nav"><ion-icon name="person-outline"></ion-icon>
+							About&nbsp;Me</a></li>
+						<li class="nav-list__item"><a href="#section-3" data-scroll-active-nav="section-3" class="nav-list__item-link button-nav"><ion-icon name="code-slash-outline"></ion-icon>
+							Portfolio</a></li>
+						<li class="nav-list__item"><a href="#section-4" data-scroll-active-nav="section-4" class="nav-list__item-link button-nav"><ion-icon name="mail-outline"></ion-icon>
+							Contact&nbsp;Me</a></li>
+						<!-- <li class="button-nav "><a href="#"><ion-icon name="download-outline"></ion-icon>
+							Download&nbsp;CV
+						</a></li> -->
+						<!-- <div id="marker"></div> -->
+					</ul>
+				</nav>
 			<!-- </div> -->
 		</nav>
 		<!-- <div class="nav__dividing-line"></div> -->
