--- a/src/html/header.html
+++ b/src/html/header.html
@@ -23,7 +23,7 @@
 				<nav class="navbar">
 					<ul class="nav-list">
 						<!-- <div id="marker"></div> -->
-						<li class="nav-list__item"><a href="#section-1" data-scroll-active-nav="section-1" class="nav-list__item-link button-nav"><ion-icon name="home-outline"></ion-icon>Home</a></li>
+						<li class="nav-list__item"><a href="#section-1" data-scroll-active-nav="section-1" class="nav-list__item-link button-nav nav-list__item-link--active"><ion-icon name="home-outline"></ion-icon>Home</a></li>
 						<li class="nav-list__item"><a href="#section-2" data-scroll-active-nav="section-2" class="nav-list__item-link button-nav"><ion-icon name="person-outline"></ion-icon>
 							About&nbsp;Me</a></li>
 						<li class="nav-list__item"><a href="#section-3" data-scroll-active-nav="section-3" class="nav-list__item-link button-nav"><ion-icon name="code-slash-outline"></ion-icon>
