--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
                   <h3 class="about__subtitle"
                   data-aos="fade-right"
                   data-aos-delay="150"
-                  >Hello, my name is <b>Yuriy Chapyuk</b>, I am <b class="birthday"></b>. <br><br> In <b>July 2021</b>, he started studying web development. I started with the basics of <b>html</b> and <b>css</b>, then I started learning the basics of <b>web design</b>, after a few days I understood how to work in <b>Figma</b>. After some time I created my study plan and slowly but surely studied topic by topic. It wasn't easy, especially when I started learning <b>JavaScript</b>, but after going through this path, I <b>couldn't give up!</b> And despite everything, I purposefully go towards my dream - to become a <b>Full Stack Web Developer</b></h3>
+                  >Hello, my name is <b>Yuriy Chapyuk</b>, I am <b class="birthday"></b>. <br><br> In <b>July 2021</b>, I started studying web development. I started with the basics of <b>html</b> and <b>css</b>, then I started learning the basics of <b>web design</b>, after a few days I understood how to work in <b>Figma</b>. After some time I created my study plan and slowly but surely studied topic by topic. It wasn't easy, especially when I started learning <b>JavaScript</b>, but after going through this path, I <b>couldn't give up!</b> And despite everything, I purposefully go towards my dream - to become a <b>Full Stack Web Developer</b></h3>
                 </div>
                 <div class="about__name-skills-container">
                   <h2 class="about__name-skills"
