--- a/src/index.html
+++ b/src/index.html
@@ -293,6 +293,19 @@
                     data-aos="fade-up"
                     data-aos-delay="250">
 
+                    <div class="portfolio-card__container">
+                      <div class="portfolio-card__img-container">
+                        <img src="@img/portfolio/FarmVest.jpg" alt="website-1">
+                      </div>
+                      <div class="portfolio-card__description-container">
+                        <h3 class="portfolio-card__title">Farm Vest</h3>
+                        <div class="portfolio-card__buttons-container">
+                          <a target="_blank" class="button portfolio-card__button portfolio-card__button-left" href="https://github.com/Scarbor0/FarmVest"><ion-icon name="logo-github"></ion-icon>GitHub</a>
+                          <a target="_blank" class="button portfolio-card__button portfolio-card__button-right" href="https://scarbor0.github.io/FarmVest/"><ion-icon name="unlink-outline"></ion-icon>Visit</a>
+                        </div>
+                      </div>
+                    </div>
+
                   <div class="portfolio-card__container">
                     <div class="portfolio-card__img-container">
                       <img src="@img/website-1.png" alt="website-1">
