update portfolio (Instrumental V2.0)

--- a/src/index.html
+++ b/src/index.html
@@ -326,8 +326,8 @@
                     <div class="portfolio-card__description-container">
                       <h3 class="portfolio-card__title">Instrumental</h3>
                       <div class="portfolio-card__buttons-container">
-                        <a target="_blank" class="button portfolio-card__button portfolio-card__button-left" href="https://github.com/Scarbor0/Instrumental.git"><ion-icon name="logo-github"></ion-icon>GitHub</a>
-                        <a target="_blank" class="button portfolio-card__button portfolio-card__button-right" href="https://cool-meringue-2245fc.netlify.app/"><ion-icon name="unlink-outline"></ion-icon>Visit</a>
+                        <a target="_blank" class="button portfolio-card__button portfolio-card__button-left" href="https://github.com/Scarbor0/Instrumental-V2.0"><ion-icon name="logo-github"></ion-icon>GitHub</a>
+                        <a target="_blank" class="button portfolio-card__button portfolio-card__button-right" href="https://scarbor0.github.io/Instrumental-V2.0/"><ion-icon name="unlink-outline"></ion-icon>Visit</a>
                       </div>
                     </div>
                   </div>
