--- a/src/html/header.html
+++ b/src/html/header.html
@@ -9,12 +9,13 @@
 			<div class="container__avatar-name">
 				<div class="nav__avatar">
 					<a href="#section-1">
-					<img src="@img/ava.png" alt="ava">
+					<img src="@img/ava.jpg" alt="ava">
 				</a>
 				</div>
 				<div class="nav__name">
 						<a href="#section-1">
-							<h1>Yuriy Chapyuk</h1>
+							<h1 class="language-en">Yuriy Chapyuk</h1>
+							<h1 class="language-ua">Юрій Чапюк</h1>
 							<span>Frontend Developer</span>
 						</a>
 					</div>
@@ -23,22 +24,39 @@
 				<nav class="navbar">
 					<ul class="nav-list">
 						<!-- <div id="marker"></div> -->
-						<li class="nav-list__item"><a href="#section-1" data-scroll-active-nav="section-1" class="nav-list__item-link button-nav nav-list__item-link--active"><ion-icon name="home-outline"></ion-icon>Home</a></li>
-						<li class="nav-list__item"><a href="#section-2" data-scroll-active-nav="section-2" class="nav-list__item-link button-nav"><ion-icon name="person-outline"></ion-icon>
-							About&nbsp;Me</a></li>
-						<li class="nav-list__item"><a href="#section-3" data-scroll-active-nav="section-3" class="nav-list__item-link button-nav"><ion-icon name="code-slash-outline"></ion-icon>
-							Portfolio</a></li>
-						<li class="nav-list__item"><a href="#section-4" data-scroll-active-nav="section-4" class="nav-list__item-link button-nav"><ion-icon name="mail-outline"></ion-icon>
-							Contact&nbsp;Me</a></li>
-						<!-- <li class="button-nav "><a href="#"><ion-icon name="download-outline"></ion-icon>
-							Download&nbsp;CV
-						</a></li> -->
-						<!-- <div id="marker"></div> -->
+						<li class="nav-list__item">
+							<a href="#section-1" data-scroll-active-nav="section-1" class="nav-list__item-link button-nav nav-list__item-link--active">
+								<ion-icon name="home-outline"></ion-icon>
+								<p class="language-en">Home</p>
+								<p class="language-ua">Головна</p>
+							</a>
+						</li>
+
+						<li class="nav-list__item">
+							<a href="#section-2" data-scroll-active-nav="section-2" class="nav-list__item-link button-nav">
+								<ion-icon name="person-outline"></ion-icon>
+								<p class="language-en">About&nbsp;Me</p>
+								<p class="language-ua">Про&nbsp;мене</p>
+							</a>
+						</li>
+
+						<li class="nav-list__item">
+							<a href="#section-3" data-scroll-active-nav="section-3" class="nav-list__item-link button-nav">
+								<ion-icon name="code-slash-outline"></ion-icon>
+								<p class="language-en">Portfolio</p>
+								<p class="language-ua">Портфоліо</p>
+							</a>
+						</li>
+
+						<li class="nav-list__item">
+							<a href="#section-4" data-scroll-active-nav="section-4" class="nav-list__item-link button-nav">
+								<ion-icon name="mail-outline"></ion-icon>
+								<p class="language-en">Contact&nbsp;Me</p>
+								<p class="language-ua">Контакти</p>
+							</a>
+						</li>
 					</ul>
 				</nav>
-			<!-- </div> -->
 		</nav>
-		<!-- <div class="nav__dividing-line"></div> -->
 	</div>
-	
 </header>
