--- a/src/html/header.html
+++ b/src/html/header.html
@@ -26,7 +26,7 @@
 						<!-- <div id="marker"></div> -->
 						<li class="nav-list__item">
 							<a href="#section-1" data-scroll-active-nav="section-1" class="nav-list__item-link button-nav nav-list__item-link--active">
-								<ion-icon name="home-outline"></ion-icon>
+								<span class="_icon-home"></span>
 								<p class="language-en">Home</p>
 								<p class="language-ua">Головна</p>
 							</a>
@@ -34,7 +34,7 @@
 
 						<li class="nav-list__item">
 							<a href="#section-2" data-scroll-active-nav="section-2" class="nav-list__item-link button-nav">
-								<ion-icon name="person-outline"></ion-icon>
+								<span class="_icon-person"></span>
 								<p class="language-en">About&nbsp;Me</p>
 								<p class="language-ua">Про&nbsp;мене</p>
 							</a>
@@ -42,7 +42,7 @@
 
 						<li class="nav-list__item">
 							<a href="#section-3" data-scroll-active-nav="section-3" class="nav-list__item-link button-nav">
-								<ion-icon name="code-slash-outline"></ion-icon>
+								<span class="_icon-code"></span>
 								<p class="language-en">Portfolio</p>
 								<p class="language-ua">Портфоліо</p>
 							</a>
@@ -50,7 +50,7 @@
 
 						<li class="nav-list__item">
 							<a href="#section-4" data-scroll-active-nav="section-4" class="nav-list__item-link button-nav">
-								<ion-icon name="mail-outline"></ion-icon>
+								<span class="_icon-email"></span>
 								<p class="language-en">Contact&nbsp;Me</p>
 								<p class="language-ua">Контакти</p>
 							</a>
