--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -6,7 +6,7 @@
 		</a>
 		<div class="footer__container-social">
 			<a target="_blank" class="footer__social button _icon-linkedin" href="https://www.linkedin.com/in/yuriy-chapyuk-438277234"></a>
-			<a target="_blank" class="footer__social button _icon-github" href="https://github.com/Scarbor0"></a>
+			<a target="_blank" class="footer__social button _icon-github" href="https://github.com/yuri-cyo"></a>
 			<a target="_blank" class="footer__social button _icon-telegram" href="https://t.me/Scarbor0"></a>
 		</div>
 	</div>
