--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
                         href="https://www.linkedin.com/in/yuriy-chapyuk-438277234"></a>
 
                         <a target="_blank" class="social-network__social-icon button _icon-github" 
-                        href="https://github.com/Scarbor0"></a>
+                        href="https://github.com/yuri-cyo"></a>
 
                         <a target="_blank" class="social-network__social-icon button _icon-telegram" 
                             
@@ -81,7 +81,7 @@
                   <p>I am <b>self-taught</b> in <b>web development</b>. In <b>July 2021</b>, I began my journey into the world of <b>web development</b> by learning the basics of <b>HTML, CSS, and JavaScript.</b>
                   </p>
                   <p>
-                    Over time, I created a <b>structured learning plan</b> and fully dedicated myself to the process, step by step. I worked diligently <b>every day</b> and remained committed to my <b>goal</b> of becoming a full-fledged <b>Front-End web developer</b>.
+                    Over time, I created a <b>structured learning plan</b> and fully dedicated myself to the process, step by step. I worked diligently <b>every day</b> and remained committed to my <b>goal</b> of becoming a <b>full-stack web developer</b>.
                   </p>
                   <p>
                     Today, I can proudly say that I have made <b>significant progress</b> and gained important skills in <b>web development</b>.
