added skills for working with vue.js

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
                     data-aos-delay="450" 
                     class="description-buttons-container">
                         <a class="button button-download"
-                        target="_blank" href="files/Portfolio Yura.pdf">
+                        target="_blank" href="files/Portfolio Yuriy Chapyuk Frontend Developer.docx">
                         <span class="_icon-download"></span>
                         Download CV</a>
                         <a class="button button-hire"
@@ -99,6 +99,22 @@
                       data-aos="fade-left"
                       data-aos-delay="350">
                     <h2>Frontend</h2>
+                    <div class="about__vue-container skill-container">
+                      <span class="about__vue">
+                        <span class="_icon-vue"></span>Vue.js</span>
+                      <span data-skills-percent="30" class="about__vue-percent about__percent"></span>
+                      <div class="about__skill-bar">
+                        <span class="about__vue-progress about__progress"></span>
+                      </div>
+                    </div>
+                    <div class="about__js-container skill-container">
+                      <span class="about__js">
+                        <span class="_icon-js"></span> JavaScript</span>
+                      <span data-skills-percent="70" class="about__js-percent about__percent"></span>
+                      <div class="about__skill-bar">
+                        <span class="about__js-progress about__progress"></span>
+                      </div>
+                    </div>
                     <div class="about__html-container skill-container">
                       <span class="about__html"><span class="_icon-html"></span> HTML</span>
                       <span data-skills-percent="90" class="about__html-percent about__percent"></span>
@@ -112,14 +128,6 @@
                       <span data-skills-percent="85" class="about__css-percent about__percent"></span>
                       <div class="about__skill-bar">
                         <span class="about__css-progress about__progress"></span>
-                      </div>
-                    </div>
-                    <div class="about__js-container skill-container">
-                      <span class="about__js">
-                        <span class="_icon-js"></span> JavaScript</span>
-                      <span data-skills-percent="70" class="about__js-percent about__percent"></span>
-                      <div class="about__skill-bar">
-                        <span class="about__js-progress about__progress"></span>
                       </div>
                     </div>
                   </div>
