--- a/src/html/header.html
+++ b/src/html/header.html
@@ -9,7 +9,7 @@
 			<div class="container__avatar-name">
 				<div class="nav__avatar">
 					<a href="#section-1">
-					<img src="@img/ava.jpg" alt="ava">
+					<img src="@img/ava.png" alt="ava">
 				</a>
 				</div>
 				<div class="nav__name">
