--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                       >
                         
                         <a target="_blank" class="social-network__social-icon button _icon-linkedin" 
-                        href="https://www.linkedin.com/in/yuriy-chapyuk-438277234"></a>
+                        href="https://www.linkedin.com/in/%D1%8E%D1%80%D1%96%D0%B9-%D1%87%D0%B0%D0%BF%D1%8E%D0%BA-438277234/"></a>
 
                         <a target="_blank" class="social-network__social-icon button _icon-github" 
                         href="https://github.com/yuri-cyo"></a>
@@ -101,7 +101,15 @@
                     <h2>Frontend</h2>
                     <div class="about__vue-container skill-container">
                       <span class="about__vue">
-                        <span class="_icon-vue"></span>Vue.js</span>
+                        <span class="_icon-ts"></span> TypeScript</span>
+                      <span data-skills-percent="20" class="about__vue-percent about__percent"></span>
+                      <div class="about__skill-bar">
+                        <span class="about__vue-progress about__progress"></span>
+                      </div>
+                    </div>
+                    <div class="about__vue-container skill-container">
+                      <span class="about__vue">
+                        <span class="_icon-vue"></span> Vue.js</span>
                       <span data-skills-percent="30" class="about__vue-percent about__percent"></span>
                       <div class="about__skill-bar">
                         <span class="about__vue-progress about__progress"></span>
@@ -253,7 +261,7 @@
                         <div class="educatin__decoration-dot"></div>
                         <div class="educatin__decoration-line last-line"></div>
                         <div class="educatin__date-container">
-                          <h3 class="educatin__data educatin__now"><span class="_icon-calendar icon-center"></span>07.2021 - Now</h3>
+                          <h3 class="educatin__data educatin__now"><span class="_icon-calendar icon-center"></span>07.2021 - Present</h3>
                         </div>
                         <div class="educatin__title-container">
                           <h2 class="educatin__title">Self-Education</h2>
