--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -5,7 +5,7 @@
 			<span class="footer__iam-subtitle">Frontend Developer</span>
 		</a>
 		<div class="footer__container-social">
-			<a target="_blank" class="footer__social button _icon-linkedin" href="https://www.linkedin.com/in/yuriy-chapyuk-438277234"></a>
+			<a target="_blank" class="footer__social button _icon-linkedin" href="https://www.linkedin.com/in/%D1%8E%D1%80%D1%96%D0%B9-%D1%87%D0%B0%D0%BF%D1%8E%D0%BA-438277234/"></a>
 			<a target="_blank" class="footer__social button _icon-github" href="https://github.com/yuri-cyo"></a>
 			<a target="_blank" class="footer__social button _icon-telegram" href="https://t.me/Scarbor0"></a>
 		</div>
