--- a/src/html/head.html
+++ b/src/html/head.html
@@ -2,7 +2,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="icon shortcut" type="image/svg+xml" href="@img/favicon.svg">
+	<link rel="icon shortcut" type="image/svg+xml" href="@img/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>@@title</title>
