adding portfolio and menu-banner

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -40,8 +40,8 @@
 							</a>
 						</li>
 
-						<li class="nav-list__item">
-							<a href="#section-3" data-scroll-active-nav="section-3" class="nav-list__item-link button-nav">
+						<li class="nav-list__item ">
+							<a href="#section-3" data-scroll-active-nav="section-3" class="nav-list__item-link button-nav menu-lit-portfolio">
 								<span class="_icon-code"></span>
 								<p class="language-en">Portfolio</p>
 								<p class="language-ua">Портфоліо</p>
