connected language api of my projects

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer card-glass">
 	<div class="footer__container section">
 		<a href="#section-1" class="footer__iam-container">
-			<h2 class="footer__iam-title">Yuriy Chapyuk</h2>
+			<h2 class="footer__iam-title lng-footer-my-name">Yuriy Chapyuk</h2>
 			<span class="footer__iam-subtitle">Frontend Developer</span>
 		</a>
 		<div class="footer__container-social">
