--- a/src/html/header.html
+++ b/src/html/header.html
@@ -14,8 +14,7 @@
 				</div>
 				<div class="nav__name">
 						<a href="#section-1">
-							<h1 class="language-en">Yuriy Chapyuk</h1>
-							<h1 class="language-ua">Юрій Чапюк</h1>
+							<h1 class="lng-menu-name">Yuriy Chapyuk</h1>
 							<span>Frontend Developer</span>
 						</a>
 					</div>
@@ -27,36 +26,41 @@
 						<li class="nav-list__item">
 							<a href="#section-1" data-scroll-active-nav="section-1" class="nav-list__item-link button-nav nav-list__item-link--active">
 								<span class="_icon-home"></span>
-								<p class="language-en">Home</p>
-								<p class="language-ua">Головна</p>
+								<p class="lng-menu-home">Home</p>
+
 							</a>
 						</li>
 
 						<li class="nav-list__item">
 							<a href="#section-2" data-scroll-active-nav="section-2" class="nav-list__item-link button-nav">
 								<span class="_icon-person"></span>
-								<p class="language-en">About&nbsp;Me</p>
-								<p class="language-ua">Про&nbsp;мене</p>
+								<p class="lng-menu-about">About Me</p>
+
 							</a>
 						</li>
 
 						<li class="nav-list__item ">
 							<a href="#section-3" data-scroll-active-nav="section-3" class="nav-list__item-link button-nav menu-lit-portfolio">
 								<span class="_icon-code"></span>
-								<p class="language-en">Portfolio</p>
-								<p class="language-ua">Портфоліо</p>
+								<p class="lng-menu-portfolio">Portfolio</p>
+
 							</a>
 						</li>
 
 						<li class="nav-list__item">
 							<a href="#section-4" data-scroll-active-nav="section-4" class="nav-list__item-link button-nav">
 								<span class="_icon-email"></span>
-								<p class="language-en">Contact&nbsp;Me</p>
-								<p class="language-ua">Контакти</p>
+								<p class="lng-menu-contact-me">Contact Me</p>
+
 							</a>
 						</li>
 					</ul>
 				</nav>
-		</nav>
+				<button class="nav-lang" data-lang="en">
+					<span class="lang-title-en">EN</span>
+					<span class="lang-title-ua">UA</span>
+					<span class="active-lang"></span>
+				</button>
+			</nav>
 	</div>
 </header>
