Light color css backup

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,5 +1,5 @@
 <header>
-	<div class="menu__icon">
+	<div data-menu="icon" class="menu__icon">
 		<span></span>
 		<span></span>
 		<span></span>
@@ -62,5 +62,6 @@
 					<span class="active-lang"></span>
 				</button>
 			</nav>
-	</div>
+			<div class="nav-fone"></div>
+		</div>
 </header>
