--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,9 @@
                     data-aos-delay="450" 
                     class="description-buttons-container">
                         <a class="button button-download lng-btn-download-cv"
-                        target="_blank" href="files/Portfolio Yuriy Chapyuk Frontend Developer.docx">
+                        target="_blank" href="https://docs.google.com/document/d/13L8_jrOFlDVDnfiO3JNKzAUjHAsSrjKp3Y_3OHAJrtc/edit?usp=sharing">
                         <span class="_icon-download"></span>
-                        Download CV</a>
+                        CV</a>
                         <a class="button button-hire lng-btn-hire-me"
                         href="#section-4">
                         <span class="_icon-hire"></span>
