fixed the layout

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -15,7 +15,7 @@
 				<div class="nav__name">
 						<a href="#section-1">
 							<h1 class="lng-menu-name">Yuriy Chapyuk</h1>
-							<span>Frontend Developer</span>
+							<span>Freelancer | Fronted developer</span>
 						</a>
 					</div>
 				</div>
