--- a/src/html/head.html
+++ b/src/html/head.html
@@ -1,9 +1,20 @@
  <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> -->
+	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="icon shortcut" type="image/svg+xml" href="@img/favicon.png">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<meta name="keywords" content="Юрій Чапюк, Yuriy Chapyuk, freelancer, front-end web development, web development"> 
+
+	<meta property="og:title" content="Юрій Чапюк | Yuriy Chapyuk - Frontend Developer">
+	<meta property="og:description" content="Portfolio">
+	<meta property="og:image" content="@img/main.jpg">
+	<meta property="og:url" content="https://yuri-chapyuk.com.ua/">
+
+	<link rel="preload" as="font" href="https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2" crossorigin>
+	<link rel="preload" as="image" href="@img/fone.svg">
 
 	<title>@@title</title>
 </head>
